fix: override chessground files margin to prevent visual gap

--- a/pgnr-ui/src/index.css
+++ b/pgnr-ui/src/index.css
@@ -10,11 +10,19 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New', monospace;
 }
 
+.font-mono {
+  font-family: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, 'Liberation Mono', 'Courier New', monospace;
+}
+
+/* Chessground adaptions */
 cg-board {
   border-radius: 4px;
   box-shadow: 0 5px 15px rgba(0, 0, 0, 0.5);
 }
 
-.font-mono {
-  font-family: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, 'Liberation Mono', 'Courier New', monospace;
+.cg-wrap coords.files {
+  /* prevent gap on the right when stretching board to 100% width */
+  left: unset !important;
+  padding-left: 24px;
 }
+/* Chessground adaptions - end */
